// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedHistoricalProfilesRadio should render correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    location={
      Object {
        "hash": "",
        "key": "default",
        "pathname": "/",
        "search": "",
        "state": null,
      }
    }
    navigationType="POP"
    navigator={
      Object {
        "action": "POP",
        "createHref": [Function],
        "createURL": [Function],
        "encodeLocation": [Function],
        "go": [Function],
        "index": 0,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "default",
          "pathname": "/",
          "search": "",
          "state": null,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(HistoricalProfilesRadio)
        profile={
          Object {
            "captured_date": "03 May 2020, 18:20 UTC",
            "id": "1234",
          }
        }
        selectedHSPIds={Array []}
      >
        <HistoricalProfilesRadio
          dispatch={[Function]}
          entities={Object {}}
          profile={
            Object {
              "captured_date": "03 May 2020, 18:20 UTC",
              "id": "1234",
            }
          }
          selectedHSPIds={Array []}
        >
          <Radio
            className=""
            id="03 May 2020, 18:20 UTC"
            isChecked={false}
            isDisabled={false}
            isValid={true}
            label="03 May 2020, 18:20 UTC"
            name="03 May 2020, 18:20 UTC"
            onChange={[Function]}
            value="03 May 2020, 18:20 UTC"
          >
            <div
              className="pf-c-radio"
            >
              <input
                aria-invalid={false}
                checked={false}
                className="pf-c-radio__input"
                data-ouia-component-id="OUIA-Generated-Radio-2"
                data-ouia-component-type="PF4/Radio"
                data-ouia-safe={true}
                disabled={false}
                id="03 May 2020, 18:20 UTC"
                name="03 May 2020, 18:20 UTC"
                onChange={[Function]}
                type="radio"
                value="03 May 2020, 18:20 UTC"
              />
              <label
                className="pf-c-radio__label"
                htmlFor="03 May 2020, 18:20 UTC"
              >
                03 May 2020, 18:20 UTC
              </label>
            </div>
          </Radio>
        </HistoricalProfilesRadio>
      </Connect(HistoricalProfilesRadio)>
    </Provider>
  </Router>
</MemoryRouter>
`;

exports[`HistoricalProfilesRadio should render correctly 1`] = `
<Fragment>
  <Radio
    className=""
    id="03 May 2020, 18:20 UTC"
    isChecked={false}
    isDisabled={false}
    isValid={true}
    label="03 May 2020, 18:20 UTC"
    name="03 May 2020, 18:20 UTC"
    onChange={[Function]}
    value="03 May 2020, 18:20 UTC"
  />
</Fragment>
`;

exports[`HistoricalProfilesRadio should render mount correctly 1`] = `
<HistoricalProfilesRadio
  profile={
    Object {
      "captured_date": "03 May 2020, 18:20 UTC",
      "id": "1234",
    }
  }
  selectedHSPIds={Array []}
>
  <Radio
    className=""
    id="03 May 2020, 18:20 UTC"
    isChecked={false}
    isDisabled={false}
    isValid={true}
    label="03 May 2020, 18:20 UTC"
    name="03 May 2020, 18:20 UTC"
    onChange={[Function]}
    value="03 May 2020, 18:20 UTC"
  >
    <div
      className="pf-c-radio"
    >
      <input
        aria-invalid={false}
        checked={false}
        className="pf-c-radio__input"
        data-ouia-component-id="OUIA-Generated-Radio-1"
        data-ouia-component-type="PF4/Radio"
        data-ouia-safe={true}
        disabled={false}
        id="03 May 2020, 18:20 UTC"
        name="03 May 2020, 18:20 UTC"
        onChange={[Function]}
        type="radio"
        value="03 May 2020, 18:20 UTC"
      />
      <label
        className="pf-c-radio__label"
        htmlFor="03 May 2020, 18:20 UTC"
      >
        03 May 2020, 18:20 UTC
      </label>
    </div>
  </Radio>
</HistoricalProfilesRadio>
`;
